# archetype-mesh-benchmark

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  Cargo.toml  DASHBOARD-BROKEN-PLAN.md  DECISIONS.md  DEEP_RESEARCH_2026-07-09.md  LICENSE  NOTICE  README.md  RENAMING.md  SCISPACE_PACKAGE.md  SPECULATIVE_PAIR_INVENTORY.md  dist-workspace.toml  main  pyproject.toml
analysis/: carrier_color_analysis.py
assets/: app.css  app.js  app.min.css  app.min.js  dashboard.html  prompt-builder.html
data/: agent_security_benchmark.sqlite  archetype_mesh_benchmark.sqlite  hacker_human_test_results.csv  tableplus_agent_security_benchmark.tpconnection.json
docker/: Dockerfile.postgres
docs/: FINDINGS.md  RELEASING.md  Test_Suite_Design_v2.md  benchmark-note-engine-tuning-neutral.md  demo-bots.md  lm-studio-gui-config-vs-api.md  local-access-strategy.md  mcp-server-design.md  nous-free-tier-gate.md
lean/: ArchetypeMesh.lean  CalibrationScope.lean
migrations/: 001_init.sql  005_trial_results.sql  006_seed_tests.sql  007_fix_model_keys.sql  008_flagship_models.sql  016_aborted_status.sql  019_drop_num_trials.sql  020_prompt_history.sql  026_field_threading.sql  027_literary_axis.sql  028_test_runs_axis_literary.sql  035_scaffold_load_mode.sql  037_fibonacci_tests.sql  038_axis_specs.sql  040_axis_specs.sql  041_modular_runs.sql  042_custom_axis.sql
policy/: EPISTEMIC_LOG.jsonl  EPISTEMIC_LOG_POLICY.md  HANDOFF_claude_code_gui.md  HANDOFF_two_deliverables.md
python/: README.md
scripts/: capability_dashboard_server.py  db_status.py  deploy-site.sh  deploy.sh  (+6 more)
(+60 files in other folders)
